--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ da mente e do corpo. As práticas competitivas estão sujeitas a regulamentaçã
  O esporte colabora com a socialização, formação e desenvolvimento dos indivíduos. Através das práticas recreativas ou profissionais também é possível realizar a inclusão de certos indivíduos que estão à margem da sociedad
 Conheça agora a história dos esportes, seus benefícios, diferença entre amadorismo e profissionalismo, além das práticas mais populares do mundo. 
 
+As atividades esportivas ou recreativas nasceram na Antiguidade e sua história é dividida em três períodos.
+ O primeiro deles é o Esporte Antigo, que vai até a primeira metade do século XIX. O Segundo momento é denominado Esporte Moderno, entre 1820 até 1980. O último é o Esporte Contemporâneo e vai de 1980 até a época atual. 
