--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>portifólio sobre o esporte</title>
+</head>
+<body>
+    
+</body>
+</html>
 <h1><portifólio sobre o esport</h1>
 
 <p>.Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
