--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>portifólio sobre o esporte</title>
+    <title>Portifólio sobre o Esporte</title>
 </head>
 <body>
-    <h1><portifólio sobre o esport</h1>
-
+    <h1><Portifólio sobre o Esport</h1>
     <p>.Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
     da mente e do corpo.<p> As práticas competitivas estão sujeitas a regulamentação de um ente legislador.</p>
     <P>O esporte colabora com a socialização, formação e desenvolvimento dos indivíduos. Através das práticas recreativas ou profissionais também é possível realizar a inclusão de certos indivíduos que estão à margem da sociedad
