--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><Portifólio sobre o Esport</h1>
-    <p>.Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
+    <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
     da mente e do corpo.<p> As práticas competitivas estão sujeitas a regulamentação de um ente legislador.</p>
     <P>O esporte colabora com a socialização, formação e desenvolvimento dos indivíduos. Através das práticas recreativas ou profissionais também é possível realizar a inclusão de certos indivíduos que estão à margem da sociedad
     Conheça agora a história dos esportes, seus benefícios, diferença entre amadorismo e profissionalismo, além das práticas mais populares do mundo.</p> 
