--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Portifólio sobre o Esporte</title>
 </head>
 <body>
-    <h1><Portifólio sobre o Esport</h1>
-   
+    <h1>Portifólio sobre o Esporte</h1>
    <img src="   
     <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
     da mente e do corpo.<p> 
