--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Portifólio sobre o Esporte</h1>
-   <img src="   
+   <img class="logo" src="esporte.avif" alt="foto esporte">
     <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
     da mente e do corpo.<p>  
 
@@ -23,12 +23,12 @@
 
      <p>O último é o Esporte Contemporâneo e vai de 1980 até a época atual.</P>
 
-    <P>Na Antiguidade, as práticas esportivas não se pareciam com as que conhecemos hoje. Em razão disso, eram conceituadas como práticas pré-esportivas.</p>
+    <P>Na Antiguidade, as práticas esportivas não se pareciam com as que conhecemos hoje em razão disso, eram conceituadas como práticas pré-esportivas.</p>
 
-    <P> Algumas eram úteis para a sobrevivência do homem, como a corrida e a caça. Outras eram mais uma preparação para guerras, como a esgrima e as lutas.</P
+    <P> Algumas eram úteis para a sobrevivência do homem, como a corrida e a caça. Outras eram mais uma preparação para guerras, como a esgrima e as lutas.</P>
         >
     <p>Com o desenvolvimento humano, muitas dessas práticas pré-esportivas oriundas do Esporte Antigo desapareceram com o passar do tempo. Outras foram se transformando em esportes.</P>
-        
+
     <P>Os esportes podem ser classificados como Autótonos e Tradicionais, de acordo com a interferência ou não de outras culturas além da que deu origem à esse esporte.</P>
  
 </body>
