--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Portifólio sobre o Esporte</title>
 </head>
 <body>
+    </header>
+  <h1>sobre o esporrte</h1>
+   </header>
     <h1>Portifólio sobre o Esporte</h1>
    <img class="logo" src="esporte.avif" alt="foto esporte">
     <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
