--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portifólio sobre o Esporte</title>
 </head>
 <body>
-    </header>
+    <header>
   <h1>sobre o esporrte</h1>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
