--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-  <h1>historia sobre o esporte </h1>
+  <h1>historia sobre o esporte na Antiguidade </h1>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
    <img class="logo" src="esporte.avif" alt="foto esporte">
