--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
   <h1>historia sobre o esporte na Antiguidade </h1>
+  <ul>
+      <li>esporte</li>
+      <li>futebol</li>
+      <li>volei</li>
+      <li>basquetebol</li>
+      </ul>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
    <img class="logo" src="esporte.avif" alt="foto esporte">
