--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>futebol</li>
       <li>volei</li>
       <li>basquetebol</li>
+      <li>tênis</li>
       </ul>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
