--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <header>
   <h1>historia sobre o esporte na Antiguidade </h1>
-  <ul>
-      <li>esporte</li>
-      <li>futebol</li>
-      <li>volei</li>
-      <li>basquetebol</li>
-      <li>tênis</li>
+  <ul class="lista"></ul>
+      <li class="item-lista">futebol</li>
+      <li class="item-lista">volei</li>
+      <li class="item-lista">basquetebol</li>
+      <li class="item-lista">tênis</li>
       </ul>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
