--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
   <h1>historia sobre o esporte na Antiguidade </h1>
-  <ul class="lista"></ul>
+  <ul class="lista">
       <li class="item-lista">futebol</li>
       <li class="item-lista">volei</li>
       <li class="item-lista">basquetebol</li>
