--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
   <h1>historia sobre o esporte na Antiguidade </h1>
   <ul class="lista">
-      <li class="item-lista">futebol</li>
-      <li class="item-lista">volei</li>
-      <li class="item-lista">basquetebol</li>
-      <li class="item-lista">tênis</li>
+      <li class="item-lista">Futebol</li>
+      <li class="item-lista">Volei</li>
+      <li class="item-lista">Basquetebol</li>
+      <li class="item-lista">Tênis</li>
       </ul>
    </header>
     <h1>Portifólio sobre o Esporte</h1>
