--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Portifólio sobre o Esporte</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
+        <img class="logo" src="esporte.avif" alt="foto esporte">
   <h1>historia sobre o esporte na Antiguidade </h1>
   <ul class="lista">
       <li class="item-lista">Futebol</li>
