--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho">
         <img class="logo" src="esporte.avif" alt="foto esporte">
-  <h1>historia sobre o esporte na Antiguidade </h1>
+  <h1>história sobre o esporte na Antiguidade </h1>
   <ul class="lista">
       <li class="item-lista">Futebol</li>
       <li class="item-lista">Volei</li>
