--- a/index.html
+++ b/index.html
@@ -17,29 +17,27 @@
       <li class="item-lista">Tênis</li>
       </ul>
    </header>
-    <h1>Portifólio sobre o Esporte</h1>
+
+   <section>
+
+        <h1>Portifólio sobre o Esporte</h1>
   
-    <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio 
-    da mente e do corpo.<p>  
+        <p>Os Esportes são todas atividades físicas realizadas pelo homem e que tem o objetivo de promover o fortalecimento da saúde e o equilíbrio    da mente e do corpo.<p>  
+        <p>As práticas competitivas estão sujeitas a regulamentação de um ente legislador.</p>
+        <P>O esporte colabora com a socialização, formação e desenvolvimento dos indivíduos. Através das práticas recreativas ou profissionais também é possível realizar a inclusão de certos indivíduos que estão à margem da sociedade
+        Conheça agora a história dos esportes, seus benefícios, diferença entre amadorismo e profissionalismo, além das práticas mais populares do mundo.</p>
+        <p>As atividades esportivas ou recreativas nasceram na Antiguidade e sua história é dividida em três períodos.</p>
+        <p>O primeiro deles é o Esporte Antigo, que vai até a primeira metade do século XIX. O Segundo momento é denominado Esporte Moderno, entre 1820 até 1980.</P>
+        <p>O último é o Esporte Contemporâneo e vai de 1980 até a época atual.</P>
+        <P>Na Antiguidade, as práticas esportivas não se pareciam com as que conhecemos hoje em razão disso, eram conceituadas como práticas pré-esportivas.</p>
+        <P> Algumas eram úteis para a sobrevivência do homem, como a corrida e a caça. Outras eram mais uma preparação para guerras, como a esgrima e as lutas.</P>
+        <p>Com o desenvolvimento humano, muitas dessas práticas pré-esportivas oriundas do Esporte Antigo desapareceram com o passar do tempo. Outras foram se transformando em esportes.</P>
+        <P>Os esportes podem ser classificados como Autótonos e Tradicionais, de acordo com a interferência ou não de outras culturas além da que deu origem à esse esporte.</P>
+    </section>
+    
+    <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/clkDc9_7FRo?si=8588cg0nURh0exIF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
 
-     <p>As práticas competitivas estão sujeitas a regulamentação de um ente legislador.</p>
-
-    <P>O esporte colabora com a socialização, formação e desenvolvimento dos indivíduos. Através das práticas recreativas ou profissionais também é possível realizar a inclusão de certos indivíduos que estão à margem da sociedade
-    Conheça agora a história dos esportes, seus benefícios, diferença entre amadorismo e profissionalismo, além das práticas mais populares do mundo.</p>
-
-    <p>As atividades esportivas ou recreativas nasceram na Antiguidade e sua história é dividida em três períodos.</p>
-
-    <p>O primeiro deles é o Esporte Antigo, que vai até a primeira metade do século XIX. O Segundo momento é denominado Esporte Moderno, entre 1820 até 1980.</P>
-
-     <p>O último é o Esporte Contemporâneo e vai de 1980 até a época atual.</P>
-
-    <P>Na Antiguidade, as práticas esportivas não se pareciam com as que conhecemos hoje em razão disso, eram conceituadas como práticas pré-esportivas.</p>
-
-    <P> Algumas eram úteis para a sobrevivência do homem, como a corrida e a caça. Outras eram mais uma preparação para guerras, como a esgrima e as lutas.</P>
-        
-    <p>Com o desenvolvimento humano, muitas dessas práticas pré-esportivas oriundas do Esporte Antigo desapareceram com o passar do tempo. Outras foram se transformando em esportes.</P>
-
-    <P>Os esportes podem ser classificados como Autótonos e Tradicionais, de acordo com a interferência ou não de outras culturas além da que deu origem à esse esporte.</P>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/clkDc9_7FRo?si=8588cg0nURh0exIF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
